complete add ingredient form - setup recipe form to search existing ingredient on name change

--- a/services/client/app/globals.css
+++ b/services/client/app/globals.css
@@ -39,6 +39,7 @@
     --color-primary-light: #b1c2c0;
     --color-secondary: #f7881f;
     --color-secondary-alt: #fbad39;
+    --color-secondary-light: #fbad3937;
     --color-green: #0d2914;
     --color-red: #c33130;
     --color-tertiary: #9fab38;
