complete initial setup of recipe form with modularization

--- a/services/client/app/globals.css
+++ b/services/client/app/globals.css
@@ -35,7 +35,7 @@
     --radius: 0.5rem;
 
     --color-primary: #144249;
-    --primary-color-alt: #355e60;
+    --color-primary-alt: #355e60;
     --color-primary-light: #b1c2c0;
     --color-secondary: #f7881f;
     --color-secondary-alt: #fbad39;
